--- a/style.css
+++ b/style.css
@@ -141,3 +141,12 @@ h3{
     position: relative;
     top: 3px;
 }
+
+.footer{
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    color: #666;
+}
