--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wdth@80.6&display=swap');
 
 html{
     box-sizing: border-box;
@@ -6,7 +6,7 @@ html{
 
 body{
     margin: 0;
-    font-family: 'Ubuntu', sans-serif;
+     font-family: "DynaPuff", system-ui;
     font-size: 12px;
     min-height: 100vh;
     display: flex;
@@ -38,10 +38,10 @@ body{
 }
 
 .container{
-    background-color: #e7e7e7;
+    background-color: #e7e3d9;
     height: 500px;
     width: 400px;
-    border-radius: 20px;
+    border-radius: 15px;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
     transition: all 0.5s ease;
 }
@@ -147,6 +147,8 @@ h3{
     bottom: 10px;
     width: 100%;
     text-align: center;
-    font-size: 14px;
-    color: #666;
+    font-size: 11px;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 5px 0;
 }
